<resources>
    <string name="app_name">BurstMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_navigation_dashboard">Dashboard</string>
    <string name="bottom_navigation_statistic">Statistic</string>
    <string name="bottom_navigation_list">List</string>
    <string name="settings_title">Settings</string>
    <string name="not_set">not set</string>
    <string name="pref_key_address">address</string>
    <string name="pref_key_pool">pool</string>
    <string name="pref_key_filter">filter</string>
    <string name="pref_key_filter_time">filterTime</string>
    <string name="pref_key_firebase_tracking">firebaseTracking</string>
    <string name="pref_key_crashlytics_tracking">crashlyticsTracking</string>
    <string name="pref_summary_firebase">Allow, to help the developer understand your behaviour of the app.</string>
    <string name="pref_summary_crashlytics">Allow, to send anonymous crash reports to the developer.</string>
    <string name="title_pending_burst">Pending BURST</string>
    <string name="title_plot_size">Plot size TB</string>
    <string name="title_historical_share">Historical share %</string>
</resources>
