<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="pool_category"
        app:title="Pool setup">

        <EditTextPreference
            android:dialogMessage="example: AAAA-1234-BBBB-4567B"
            android:icon="@drawable/ic_person"
            android:key="@string/pref_key_address"
            android:summary="Set your Wallet address"
            android:title="Your Address"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/listArray"
            app:entryValues="@array/listValues"
            app:icon="@drawable/ic_cloud"
            app:key="@string/pref_key_pool"
            app:title="Pool settings"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="other_category"
        app:title="Others">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/listArrayFilter"
            app:entryValues="@array/listValuesFilter"
            app:icon="@drawable/ic_filter_list_black_24dp"
            app:key="@string/pref_key_filter"
            app:title="Data step width filter"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/listArrayFilterTime"
            app:entryValues="@array/listValuesFilterTime"
            app:icon="@drawable/ic_filter_list_black_24dp"
            app:key="@string/pref_key_filter_time"
            app:title="Data filter"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>